--- a/index.ipynb
+++ b/index.ipynb
@@ -481,7 +481,8 @@
     }
    ],
    "source": [
-    "dict(city=\"Las Vegas\", state=\"Nevada\")"
+    "dict(city=\"Las Vegas\", state=\"Nevada\")\n",
+    "las vegas"
    ]
   },
   {
