--- a/index.ipynb
+++ b/index.ipynb
@@ -466,23 +466,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'city': 'Las Vegas', 'state': 'Nevada'}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-13-8438ebf2bd67>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-8438ebf2bd67>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    las vegas\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "dict(city=\"Las Vegas\", state=\"Nevada\")\n",
-    "las vegas"
+    "dict(city=\"Las Vegas\", state=\"Nevada\")\n"
    ]
   },
   {
