--- a/index.ipynb
+++ b/index.ipynb
@@ -466,20 +466,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-13-8438ebf2bd67>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-8438ebf2bd67>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    las vegas\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dict(city=\"Las Vegas\", state=\"Nevada\")\n"
+    "dict(city=\"Las Vegas\", state=\"Nevada\")\n",
+    "dict"
    ]
   },
   {
