--- a/index.ipynb
+++ b/index.ipynb
@@ -466,23 +466,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict"
+       "{'city': 'Las Vegas', 'state': 'Nevada'}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dict(city=\"Las Vegas\", state=\"Nevada\")\n",
-    "dict"
+    "dict(city=\"Las Vegas\", state=\"Nevada\")"
    ]
   },
   {
